<resources>
    <string name="app_name">Coupon monster</string>
    <string name="title_activity_main">Coupon Monster </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Coupon Monster</string>
    <string name="nav_header_subtitle">serkan.ozel@boun.edu.tr</string>
    <string name="nav_header_desc">Navigation</string>

    <string name="action_settings">Settings</string>

    <string name="home_desc">Select a coupon below: </string>
    <string name="home_conn_err">Please connect to server by going to settings tab! </string>

    <string name="text_options_welcome"> Settings: </string>

    <string name="menu_home">Play</string>
    <string name="menu_online">Online People</string>
    <string name="menu_options">Options</string>


    <string name="options_welcome">Settings:</string>
    <string name="options_address">Address:</string>
    <string name="options_port">Port:</string>
    <string name="options_apbutton">Connect</string>
    <string name="options_usernamechange">Change your name and username</string>
    <string name="options_name">Name:</string>
    <string name="options_username">Username:</string>
    <string name="options_userdata_changer_button">Update</string>
    <string name="options_connect_text">Connect to server</string>

    <string name="question_remaining">Remaining Time: %1$d</string>
    <string name="question_answer">Answer:</string>
    <string name="question_button">Submit</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>


    <string name="appbar_connected">Connected</string>
    <string name="appbar_notconnected">Not connected</string>

    <string name="coupon_fragment_text">Coupons you won: </string>
    <string name="gained_coupons">Gained Coupons</string>
    <string name="cancel_button">Cancel</string>

</resources>
