<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_online"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_online" />

        <item
            android:id="@+id/nav_coupons"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/gained_coupons"/>
        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_options" />
    </group>

</menu>
